--- a/css/load.css
+++ b/css/load.css
@@ -10,7 +10,7 @@ html {
 }
 
 body{
-    display:flex;
+    display: flex;
     align-content: center;
     align-items: center;
     justify-content: center;
@@ -23,30 +23,30 @@ body{
     background-repeat: no-repeat;
 }
 
-.content_box{
+.box{
     background-color: #FFFFFFC3;
     border-radius: 3vw;
-    height: 90vh;
-    width: 70vw;
+    width: 35%;
+    min-height: 0;
+    aspect-ratio: 1.25;
+}
+
+.box_inner{
+    display:flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.box img{
+    position:absolute;
+    height: 35%;
+    aspect-ratio: 1;
     display: flex;
-    flex-direction: column;
-}
-
-.content_box h1{
-    margin-left: 2.5vw;
-    margin-top: 2.5vw;
-    margin-bottom: 1vw;
-    font-size: 2.5vw;
-}
-
-.content_box h2{
-    margin-left: 2.5vw;
-    margin-bottom: 1vw;
-    font-size: 1.75vw;
-}
-
-.content_box p{
-    margin-left: 2.5vw;
-    white-space: normal;
-    font-size: 1.25vw;
+    align-items: center;
+    justify-content: center;
+    pointer-events: none;
 }
